# olik-font

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Taskfile.yml  cliff.toml
project/py/: pyproject.toml
project/py/data/: LICENSE-cjk-decomp  LICENSE-moe-4808  carved_components.json  extraction_plan.yaml  variant_caps.yaml
project/py/data/animcjk/: SOURCE.md  dictionaryZhHant.txt  graphicsZhHant.txt
project/py/data/glyph_decomp/: 丁.json
project/py/scripts/: verdict_styling.py
project/py/src/olik_font/: cli.py  geom.py  types.py
project/py/src/olik_font/bulk/: __init__.py  batch.py  charlist.py  mmh_partition.py  ops.py  planner.py  reuse.py  status.py  variant_caps.py  variant_match.py
project/py/src/olik_font/compose/: __init__.py  flatten.py  iou.py  walk.py  z_layers.py
project/py/src/olik_font/constraints/: __init__.py  presets.py  primitives.py
project/py/src/olik_font/decompose/: __init__.py  instance.py
project/py/src/olik_font/emit/: __init__.py  library.py  record.py  trace.py
project/py/src/olik_font/prototypes/: __init__.py  carve.py  extract.py  extraction_plan.py  geom_stats.py  measure.py
project/py/src/olik_font/rules/: __init__.py  engine.py  rules.yaml
project/py/src/olik_font/sink/: __init__.py  connection.py  (+2 more)
project/py/tests/: conftest.py  test_anchor_fit.py  test_animcjk_source.py  test_authored_loader.py  test_bulk_batch.py  test_bulk_charlist.py  test_bulk_ops.py  test_bulk_planner.py  test_bulk_reuse.py  test_bulk_status.py  test_bulk_variant_smoke.py  test_cjk_decomp.py  test_cjk_decomp_fetch.py  test_cjk_decomp_overrides.py  test_cli.py  test_cli_db_export.py  test_cli_db_sync.py  test_cli_extract.py  test_cli_extract_retry.py  test_cli_style.py  test_comfyui_client.py  test_component_carving.py  test_compose_modes.py  test_compose_walk.py  test_constraint_primitives.py  test_decompose_instance.py  test_emit.py  test_extract.py  test_extraction_plan.py  test_extraction_plan_shape.py  test_flatten.py  test_geom.py  test_geom_stats.py  test_integration_core.py  test_iou.py  test_iou_gate.py  test_makemeahanzi.py  test_makemeahanzi_fetch.py  test_measure.py  test_mmh_partition.py  (+31 more)
project/py/tests/fixtures/: cjk_decomp_sample.json  cjk_decomp_sample.txt  mmh_sample.jsonl
(+202 files in other folders)
